--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "http-status-codes": "^2.3.0",
         "joi": "^17.10.2",
         "lodash": "^4.17.21",
+        "material-ui-confirm": "^3.0.9",
         "mongodb": "^6.0.0"
     },
     "devDependencies": {
